// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationDialog should not render cancel button if onCancel function is not provided 1`] = `
<Bootstrap(Modal)
  backdrop={false}
  onHide={null}
  show={true}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Something happened.
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      OK
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`ConfirmationDialog should render invisible dialog 1`] = `
<Bootstrap(Modal)
  backdrop={false}
  onHide={[Function]}
  show={false}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      OK
    </Button>
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Cancel
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`ConfirmationDialog should render visible dialog with text 1`] = `
<Bootstrap(Modal)
  backdrop={false}
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      OK
    </Button>
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Cancel
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`ConfirmationDialog should render visible dialog with text and operation in progress 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
    <Spinner
      className="core-spinner"
      size={16}
    />
     
    <Button
      active={false}
      className="core-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      OK
    </Button>
    <Button
      active={false}
      className="core-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Cancel
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;
